crates/vexor-compiler/tests/golden/error/output/list_range2.err
parse error at line 2, column 15
  |
2 | val zs = [1..2,3]
  |               ^
invalid list
expected `]`, comma-separated list, range `[x..y]`, range `[x,y..z]`